--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Job Finder</title>
     <script src="./assets/script/index.js" type="module"></script>
     <script src="./assets/script/post-creator.js" type="module"></script>
+    <script src="./assets/script/fecth-users.js" type="module"></script>
     <link rel="stylesheet" href="./assets/style/index.css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -60,44 +61,11 @@
                         </div>
                     </section>
                     <section class="new-friends-section">
+                        <div class="title-friend-section">
+                            <h2>Who to Follow?</h2>
+                        </div>
                         <div class="friends-info">
                             <ul>
-                                <li>
-                                    <div class="friend-img"><img src="./assets/img/man.jpg" alt="friend"></div>
-                                    <div class="friend-info-list">
-                                        <h3>Mark Salinas</h3>
-                                        <p class="friend-company">Google</p>
-                                        <p class="friend-job">Developer</p>
-                                        <button class="follow-friend-btn"><i class="fa-solid fa-plus"></i></button>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="friend-img"><img src="./assets/img/man.jpg" alt="friend"></div>
-                                    <div class="friend-info-list">
-                                        <h3>Mark Salinas</h3>
-                                        <p class="friend-company">Google</p>
-                                        <p class="friend-job">Developer</p>
-                                        <button class="follow-friend-btn"><i class="fa-solid fa-plus"></i></button>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="friend-img"><img src="./assets/img/man.jpg" alt="friend"></div>
-                                    <div class="friend-info-list">
-                                        <h3>Mark Salinas</h3>
-                                        <p class="friend-company">Google</p>
-                                        <p class="friend-job">Developer</p>
-                                        <button class="follow-friend-btn"><i class="fa-solid fa-plus"></i></button>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="friend-img"><img src="./assets/img/man.jpg" alt="friend"></div>
-                                    <div class="friend-info-list">
-                                        <h3>Mark Salinas</h3>
-                                        <p class="friend-company">Google</p>
-                                        <p class="friend-job">Developer</p>
-                                        <button class="follow-friend-btn"><i class="fa-solid fa-plus"></i></button>
-                                    </div>
-                                </li>
                             </ul>
                         </div>
                     </section>
@@ -132,7 +100,7 @@
                 </div>
             </form>
             <button class="login-btn">LOGIN</button>
-            <p class="login-advice"><i class="fa-solid fa-circle-exclamation"></i>Your username or password is not correct.</p>
+            <p class="login-advice"><i class="fa-solid fa-circle-exclamation"></i><span></span></p>
         </div>
    </div>
 </body>
