--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <section class="new-friends-section">
                         <div class="title-friend-section">
                             <h2>Who to Follow?</h2>
+                            <p>Add new friends and meet more people!</p>
                         </div>
                         <div class="friends-info">
                             <ul>
